assets/css/style.css
/* GLOBAL */

.row {
    margin: 0;
}

.container-fluid {
    margin: 0;
    padding: 0;
}

/* API IMAGE SECTION */


.EGA_apiImg {
    transition: transform .2s;
    transition: 0.2s;
    margin: 30px -40px;
}
.EGA_apiImg:hover {
    transform: scale(1.05);
    filter : drop-shadow(0 5px 5px rgba(0, 0, 0, 0.438));
}

.EGA_apiImg:active {
    transform: scale(.9);
    filter : drop-shadow(0 5px 5px rgba(255, 255, 255, 0.438));
}

.EGA_activeToggle {
    border-radius: 50%;
    box-shadow:
        inset 0 0 50px #fff,      /* inner white */
        inset 20px 0 20px #D9CFE7,   /* inner left magenta short */
        inset -20px 0 20px #0ff,  /* inner right cyan short */
        inset 20px 0 60px #D9CFE7,  /* inner left magenta broad */
        inset -20px 0 60px #0ff, /* inner right cyan broad */
        0 0 50px #fff,            /* outer white */
        -10px 0 40px #D9CFE7,        /* outer left magenta */
        10px 0 40px #0ff;         /* outer right cyan */
}

.EGA_apiRow {
    background: #A8BCBA;
    width: 100%;
    padding-top: 40px;
    
}

/* SEARCH BAR SECTION */

.EGA_searchRow {
    display: flex;
    background: #A8BCBA;
    width: 100%;
    height: 250px;
}

.btn-outline-success {
    color: white;
    border-color: white;
}

.EGA_navbar {
    width: 100%;
    margin: auto;
    justify-content: center;
    align-items: center;
}
.EGA_searchbarDiv {
    display: flex;
}
.EGA_searchBar {
    width: 100%;
    display: block;
    margin-right: 40px;
}

.EGA_searchBtn {
    margin-top: 20px !important;
    float:right;
    
}

/* RADIO BUTTONS SECTION */

.EGA_radioButtons {
    padding: 40px;
}    

.EGA_radioButton {
    display: inline-block;
    float: left;
}

.input-group-text{
    background-color: transparent;
}

input[type=checkbox] {
    transform: scale(1.5);
  }

.EGA_radioBoxText {
    margin-left: 20px;
    font-size: 1.5em;
    color: #50697D;
}

.EGA_radioColumn {
    margin: auto;
    padding: 0;
    display: flex;
    justify-content: center;
}

.EGA_radioBoxes {

    margin-top: auto;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    height: 40px;
}

.radio-inline {
    padding: 15px;
}

.btn-secondary {
    background-color: #50697D;
    border-color: #50697D
}

/* DISPLAY AREA COLUMNS */

.EGA_logoDiv {
    text-align: center;
}

.EGA_displayRow {

}

.EGA_gitHubColumns {
    background: #ACC66D;
    width: 100%;
    min-height: 400px;
    justify-content: center;
    padding-top: 20px;
    
}


.EGA_youTubeColumns {
    background: #50697D;
    width: 100%;
    min-height: 400px;
    justify-content: center;
    color: white;
    padding: 0px;
    display: hidden;
}


.EGA_stackOverFlowColumns {
    background: #D9CFE7;
    width: 100%;
    min-height: 400px;
    justify-content: center;
    padding-top: 20px;
}

/* DYNAMIC LOGOS */

#EGA_youtubeLogo {
    max-height: 75px;
    margin-top: 10px;
    padding-top: 10px;
   
}

#EGA_stackoverflowLogo  {
    
    max-height: 50px;
    margin-top: 10px;
    
       
}

#EGA_githubLogo  {
    
    max-height: 35px;
    margin-top: 10px; 
    
      
}

#EGA_spotifyLogo  {
    
    max-height: 50px;
    margin-top: 10px; 

     
}

#EGA_amazonLogo {

    max-height: 75px;
    margin-top: 10px;
    
    
}

/* FOOTER */

#EGA_footer {
    background-color: #50697D;
    margin-top: 10px;  
    color: white;
    text-align: center;
}
.hidden {
    display: none;
}

/* SIDE BAR CONTENT */

/*
    DEMO STYLE
*/

@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";

a,
a:hover,
a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}


.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px dashed #ddd;
    margin: 40px 0;
}

/* ---------------------------------------------------
    SIDEBAR STYLE
----------------------------------------------------- */

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: -250px;
    height: 100vh;
    z-index: 999;
    background: #7386D5;
    color: #fff;
    transition: all 0.3s;
    overflow-y: scroll;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#sidebar.active {
    left: 0;
}

#dismiss {
    width: 35px;
    height: 35px;
    line-height: 35px;
    text-align: center;
    background: #7386D5;
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
    -webkit-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#dismiss:hover {
    background: #fff;
    color: #7386D5;
}

.overlay {
    display: none;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.7);
    z-index: 998;
    opacity: 0;
    transition: all 0.5s ease-in-out;
}
.overlay.active {
    display: block;
    opacity: 1;
    top: 0;
}

#sidebar .sidebar-header {
    padding: 20px;
    background: #6d7fcc;
}

#EGA_sidebarCollapse {
    background-color: rgb(86, 133, 148);
    border-color: rgb(86, 133, 148);
}

#EGA_youtubeSubmenu {
    padding: 10px;
}
#EGA_stackoverflowSubmenu {
    padding: 10px;
}
#EGA_githubSubmenu {
    padding: 10px;
}

#mCSB_1 {
    overflow-y: auto;
}
.results {
    margin: 5px;
}
#EGA_spanFavorites {
    margin-left: 10px;
}

#EGA_sidebarCollapse:hover {
    background-color: #324856;
    border-color: #324856;
}
#sidebar ul.components {
    padding: 20px 0;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}

#sidebar ul li a:hover {
    color: #7386D5;
    background: #fff;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}

a[data-toggle="collapse"] {
    position: relative; 
}

.mCSB_container {
    top: 0;
}
#mCSB_1_container {
    top: 0;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}


ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

a.download {
    background: #fff;
    color: #7386D5;
}

a.article,
a.article:hover {
    background: #6d7fcc !important;
    color: #fff !important;
}

/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

#content {
    width: 100px;
    padding: 20px;
    transition: all 0.3s;
    position: absolute;
    top: 0;
    left: 0;
}

/* STACK EXCHANGE API */
.EGA_container {
    width: 300px;
}

.EGA_cardBody {
    display: flex;
    justify-content: center;
    background-color: rgb(255, 255, 255);
    border: 1px black solid;
}

.EGA_cardTitle {
    font-size: 1em;
    line-height: 1.6em;
    padding: 0px 10px 20px 0px;
    text-align: left;
    color: black;
}

.jrsStat {
    border: 1px solid white;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(255, 137, 41);
    box-shadow: 4px 3px 13px 0px rgb(172, 169, 169);
    color: white;
    font-weight: 400;
}

.jrsButton {
    background-color:#50697D;
    border: none;
    border: 1px solid white;
    box-shadow: 4px 3px 13px 0px rgb(172, 169, 169);
}
.jrsButton:hover {
    text-decoration: none;
    background-color: rgb(138, 180, 214);
}
.EGA_viewBox {
    align-self: stretch;
    margin-top: 30px !important;
    margin-bottom: 0 !important;
    
}

.jrsImg {
    height: 58px;
    width: 58px;
    
    box-shadow: 4px 3px 13px 0px rgb(172, 169, 169);
}

.jrsStatsSection {
    display: flex;
    flex-direction: column;
}

.jrsTitleSection {
    display: flex;
    flex-direction: column;
    padding-left: 40px;
    align-items: center;
}

/* FAVORITE ICON STYLING */
.fa-star {
    color: rgb(255, 230, 88);
}

.favorite {
    background-color: rgba(9, 31, 37, 0.863);
    color: white;
    border: none;
    text-align: right;
}
.favorite:hover {
    background-color: rgba(37, 75, 85, 0.863);
    color: white;
    border: none;
}
.favorite:active {
    background-color: rgb(52, 201, 33);
    color: 50697D;
    border: none;
}
.jrsRow {
    justify-content: center;
}
.jrsRow > .favorite { /*EGA - Added this row to space the vaforite button specific to the stack column */
    margin: 20px;
}

.favorited {
    background-color: #87c488;
    text-align: right;
}

/* MEDIA QUERIES */


@media screen and (max-width:986px) {

    .EGA_apiImg {
        width: 120px;
    }
    .EGA_searchbarDiv {
        padding-left: 40px;
        padding-right: 0px;
    }
    .EGA_radioBoxes {
        margin-left: 50px;
    }
    .btn-secondary {
        font-size: .8em;
    }
  }
  
  @media screen and (max-width:768px){

    .EGA_apiImg {
        width: 110px;
    }
    .EGA_searchbarDiv {
        padding-left: 40px;
        padding-right: 0px;
    }
    .EGA_radioBoxes {
        margin-left: 50px;
    }
    .btn-secondary {
        font-size: .8em;
    }
  }
  @media screen and (max-width:715px){
    
    .EGA_apiImg {
        width: 100px;
    }
  }
  .EGA_radioBoxes {
    margin-left: 40px;
}
  @media screen and (max-width:640px){
      
    .EGA_apiRow {
          padding: 80px 10px 0px 10px;
          margin: auto; 
      }
      .EGA_radioBoxes {
        margin-left: 0;
    }
    .EGA_apiImg {
        width: 80px;
    }
    .btn-secondary {
        font-size: .8em;
    }
  }
  @media screen and (max-width:577px){
    .btn-secondary {
        font-size: .6em;
    }
  }

